# trader-1.0

./: CLEANUP_SUMMARY_20251102_133748.txt  DIRECTORY_ORGANIZATION.md  README_BOOTSTRAP.md  advanced_backtester.py  advanced_port_manager.py  advanced_risk_management.py  advanced_risk_protection.py  automated_reporter.py  backtesting_report.txt  challenge_start_backup_20251102_110435.py  check_ftmo_complete.py  check_integration.py  check_phase2_backup_20251102_110435.py  cleanup_preview.json  comprehensive_analysis_results_20251101_200327.txt  comprehensive_symbol_analyzer.py  comprehensive_symbol_analyzer_final.py  comprehensive_symbol_analyzer_final_backup_20251102_110435.py  comprehensive_test_backup_20251102_110435.py  create_icon.py  deep_learning_analyzer_backup_20251102_110435.py  dir.txt  drawdown_protection_backup_20251102_110435.py  dynamic_timeframe_optimizer_backup_20251102_110435.py  enhanced_gui_integration_backup_20251102_110435.py  enhanced_mt5_integration_backup_20251102_110435.py  enhanced_risk_manager_backup_20251102_110435.py  enhanced_trading_dashboard.py  enhanced_trading_dashboard.py.bak  enhanced_trading_dashboard_backup.py  enhanced_trading_dashboard_backup_20251102_105746.py  enhanced_trading_dashboard_backup_20251102_110435.py  final_check.py  final_verification_backup_20251102_110435.py  final_verify_backup_20251102_110435.py  find_symbols_line.py  fixed_backtester.py  fixed_backtester_backup_20251102_110435.py  fixed_dynamic_optimizer.py  fixed_optimization_results_20251101_192132.txt  (+118 more)
Logs/: healthbeat.json
config/: config.json
(+38 files in other folders)
